add AuthenticationRequired
